# CareAuth

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
migrations/: 20230110064522_initial_roles.sql  20230126040957_initial_users.sql  20230203075253_initial_roles.sql  20230203142212_initial_users.sql  20230203150522_add_hashed_password_to_users.sql.sql  schema.sql
scripts/: dbmate.sh  prepare.sh  run.sh  testing_postgres.sh  testing_run.sh
src/: app.rs  app.ts  index.ts  main.rs  router.rs
src/apiserver/: errors.ts  index.ts  router.ts
src/router/: automaton.rs  mod.rs
