[package]
name = "care_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
thiserror = { version = "1.0" }
serde = "1.0.152"
serde_json = "1.0.91"
regex = "1"
erased-serde = "0.3.24"
